Tag branches/1.3 r3098 as tags/1.3.15